--- a/index.html
+++ b/index.html
@@ -5,15 +5,93 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Voice-Controlled Slider</title>
 <style>
-  body { font-family: sans-serif; text-align: center; padding: 50px; }
-  #slider { width: 80%; margin: 30px 0; }
-  button { padding: 10px 20px; font-size: 16px; margin: 5px; }
-  #savedValue { font-weight: bold; color: green; margin-top: 15px; }
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    text-align: center;
+    padding: 50px;
+    background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb);
+    background-size: 400% 400%;
+    animation: gradientBG 15s ease infinite;
+  }
+
+  @keyframes gradientBG {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+
+  h1 { color: #fff; text-shadow: 1px 1px 5px rgba(0,0,0,0.3); }
+
+  #slider {
+    width: 80%;
+    margin: 30px 0;
+    height: 15px;
+    -webkit-appearance: none;
+    background: #ddd;
+    border-radius: 10px;
+    transition: background 0.3s;
+  }
+
+  #slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #ff6f61;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: transform 0.2s, background 0.3s;
+  }
+
+  #slider::-webkit-slider-thumb:hover {
+    transform: scale(1.2);
+    background: #ff3b2e;
+  }
+
+  button {
+    padding: 12px 25px;
+    font-size: 16px;
+    margin: 5px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    background: #ff6f61;
+    color: #fff;
+    transition: transform 0.2s, background 0.3s;
+  }
+
+  button:hover {
+    transform: scale(1.1);
+    background: #ff3b2e;
+  }
+
+  #savedValue { font-weight: bold; color: #00ff88; margin-top: 15px; }
+
+  #pulse {
+    margin: 20px auto;
+    width: 50px;
+    height: 50px;
+    background: #ff6f61;
+    border-radius: 50%;
+    box-shadow: 0 0 15px rgba(255,111,97,0.6);
+    transition: transform 0.1s, box-shadow 0.1s;
+  }
+
+  #value {
+    font-weight: bold;
+    color: #fff;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+  }
+
+  #checkbox-row { margin-top: 10px; display: flex; justify-content: center; align-items: center; gap: 10px; color: #fff; font-weight: bold; }
+
 </style>
 </head>
 <body>
 
 <h1>Voice-Controlled Slider</h1>
+
+<div id="pulse"></div>
+
 <input type="range" id="slider" min="0" max="100" value="50">
 <p>Slider value: <span id="value">50</span>%</p>
 
@@ -21,6 +99,11 @@
 <button id="saveBtn">Save Value</button>
 
 <p id="savedValue"></p>
+
+<div id="checkbox-row">
+  <input type="checkbox" id="readCheck" disabled>
+  <label for="readCheck">I have set the volume</label>
+</div>
 
 <script>
 let audioContext;
@@ -30,6 +113,8 @@ let dataArray;
 let slider = document.getElementById('slider');
 let valueDisplay = document.getElementById('value');
 let savedDisplay = document.getElementById('savedValue');
+let pulse = document.getElementById('pulse');
+let readCheck = document.getElementById('readCheck');
 let running = false;
 let animationId = null;
 
@@ -45,6 +130,11 @@ function updateSlider() {
     let sliderValue = Math.min(100, Math.max(0, Math.floor(rms * 500)));
     slider.value = sliderValue;
     valueDisplay.textContent = sliderValue;
+
+    // Pulse reacts to RMS volume
+    let scale = 1 + rms * 1.5;
+    pulse.style.transform = `scale(${scale})`;
+    pulse.style.boxShadow = `0 0 ${10 + rms*50}px rgba(255,111,97,${0.5 + rms})`;
 
     animationId = requestAnimationFrame(updateSlider);
 }
@@ -79,15 +169,22 @@ function stopSlider() {
         animationId = null;
     }
     running = false;
+    // Reset pulse to normal
+    pulse.style.transform = 'scale(1)';
+    pulse.style.boxShadow = '0 0 15px rgba(255,111,97,0.6)';
 }
 
 // Event listeners
-document.getElementById('setBtn').addEventListener('click', startListening);
+document.getElementById('setBtn').addEventListener('click', () => {
+    startListening();
+    readCheck.checked = false; // ready to set volume again
+});
 
 document.getElementById('saveBtn').addEventListener('click', () => {
-    stopSlider();
+    stopSlider(); // Stop slider movement
     let savedValue = slider.value;
     savedDisplay.textContent = `Saved value: ${savedValue}% ✅`;
+    readCheck.checked = true;
 });
 </script>
 
